--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,18 @@
   </head>
 
   <body>
+    <script>
+    window.onload = function() {
+        var anchors = document.getElementsByTagName('a');
+        for(var i = 0; i < anchors.length; i++) {
+            var anchor = anchors[i];
+            anchor.onclick = function() {
+                ga('send', 'event', 'buttons', 'click', 'Who wants beta-print');
+            }
+        }
+    }
+</script>
+    
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -27,8 +39,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">Блог Eda</a>
+            <a href="{{ site.baseurl }}/about">Кто Eda</a>
           </nav>
         </header>
       </div>
