--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         for(var i = 0; i < anchors.length; i++) {
             var anchor = anchors[i];
             anchor.onclick = function() {
-                ga('send', 'event', 'buttons', 'click', 'Who wants beta-print');
+                ga('send', 'event', 'I want logo', 'click', 'Who wants beta-print');
             }
         }
     }
