--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Блог Eda</a>
-            <!-- <a href="{{ site.baseurl }}/about">Кто Eda?</a> --!>
+            <!-- <a href="{{ site.baseurl }}/about">Кто Eda?</a> -->
           </nav>
         </header>
       </div>
@@ -53,7 +53,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+         <!-- {% include svg-icons.html %} -->
         </footer>
       </div>
     </div>
