--- a/style.scss
+++ b/style.scss
@@ -68,22 +68,24 @@ p {
   margin: 15px 0;
 }
 
+/* #Alizarin Flat Button
+==================================================*/
 .btn {
   position: relative;
   vertical-align: top;
   width: 100%;
-  height: 50px;
-  padding: 5px;
-  font-size: 18px;
+  height: 70px;
+  padding: 7px;
+  font-size: 25px;
   color: white;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  background: #e67e22;
+  background: #e74c3c;
   border: 0;
-  border-bottom: 2px solid #da751c;
+  border-bottom: 2px solid #db4334;
   cursor: pointer;
-  -webkit-box-shadow: inset 0 -2px #da751c;
-  box-shadow: inset 0 -2px #da751c;
+  -webkit-box-shadow: inset 0 -2px #db4334;
+  box-shadow: inset 0 -2px #db4334;
 }
 .btn:active {
   top: 1px;
