--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Блог Eda</a>
             <!-- <a href="{{ site.baseurl }}/about">Кто Eda?</a> -->
-             <a href="https://www.donationalerts.com/r/edaline">Задонатить🍬 глупенькой Eda</a><>
+             <a href="https://www.donationalerts.com/r/edaline">Задонатить🍬 глупенькой Eda</a>
           </nav>
         </header>
       </div>
