--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbNCTrH9p4CPYzERdFSWycf257Bw1L-4pRBpnLNnxA3Pq7HA/viewform?embedded=true" width="90%" height="607" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbNCTrH9p4CPYzERdFSWycf257Bw1L-4pRBpnLNnxA3Pq7HA/viewform?embedded=true" width="90%" height="100%" position="absolute" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
          <!-- {% include svg-icons.html %} -->
         </footer>
       </div>
