--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,10 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" alt="eda-site-veseliy-kot-simvol"/></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <div class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></div>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
