--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,8 @@ h4 {
 p {
   margin: 15px 0;
   line-height: 1.56;
-  font-size: 18px;
+  font-size: 16px;
+  overflow-wrap: break-word;
 }
 
 /* #Alizarin Flat Button
