--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,19 @@ published: true
   <div class="date">
     Написанно {{ page.date | date: "%B %e, %Y" }}
   </div>
+
+  <div class="post-nav">
+  <div>
+    {% if page.previous.url %}
+    <a href="{{page.previous.url}}">&laquo;&nbsp;{{page.previous.title}}</a>
+    {% endif %}
+  </div>
+  <div class="post-nav-next">
+    {% if page.next.url %}
+    <a href="{{page.next.url}}">{{page.next.title}}&nbsp;&raquo;</a>
+    {% endif %}
+  </div>
+</div>
   
   <div class="relatedPosts">
 
