--- a/style.scss
+++ b/style.scss
@@ -241,6 +241,22 @@ img {
   }
 }
 
+.post-nav {
+    /* Insert your custom styling here. Example:
+
+       font-size: 14px;
+       margin-bottom: 1em;
+    */
+    display: flex;
+}
+.post-nav div {
+    /* flex-grow, flex-shrink, flex-basis */
+    flex: 1 1 0;
+}
+.post-nav-next {
+    text-align: right;
+}
+
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
