--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ published: true
   </div>
 
   <div class="date">
-    Написанно {{ page.date | date: "%B %e, %Y" }}
+  <!-- Написанно {{ page.date | date: "%B %e, %Y" }} -->
   </div>
 
   <div class="post-nav">
